--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -91,7 +91,7 @@
   PB_PRS_Prussian_Hydra_tt:0 "\n§gShould the timer tick down to zero the Prussian nobility will secure control of the state and the Junkers will become the ruling party.§!"
   Reactionary_Theorists_tt:0 "Should this nation agree we will recieve §G+50§! political power, and we have a 33% chance of getting either 10 army, navy, or air experience."
   PB_PRS_Europes_Reactionary_Bastion_tt:0 "\n§gAllows for the invitation of other European far-right theorists granting Prussia some additional political power and army, navy, and air experience.§!"
-  PB_PRS_Attempt_A_Compromise_With_Warsaw_tt:0 "\n§gShould Poland agree to our compromise a population exchange will happen in Posen, Polish citizens will be allowed to leave the state freely and Germans living in Poland will be allowed to move to Posen. Poland will loose their core on Posen but will retain their claim on the state.§!"
+  PB_PRS_Attempt_A_Compromise_With_Warsaw_tt:0 "\n§gShould Poland agree to our compromise a population exchange will happen in Posen, Polish citizens will be allowed to leave the state freely and Germans living in Poland will be allowed to move to Posen. Poland will lose their core on Posen but will retain their claim on the state.§!"
   PB_PRS_Liquidate_The_Princes_tt:0 "Every unit leader that has the trait §HJunker Aristocracy§! will be §Rpurged§!"
   PB_PRS_Ideology_Above_Identity_tt:0 "The §HBattalion of Free Imperials§! will be raised, comprised of British §gneo-imperialist§! defectors"
   PB_PRS_Strengthen_The_Party_tt:0 "A number of new ministers will be available to recruit:\n\n"
