More Russia focus tree work

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -818,35 +818,48 @@
   PB_RUS_Sanctify_the_Khylsts:0 "Sanctify the Khylsts"
   PB_RUS_Debauchery_in_the_Name_of_God:0 "Debauchery in the Name of God"
   PB_RUS_The_Embodiment_of_Christ:0 "The Embodiment of Christ"
-
-  PB_RUS_Addressing_the_world:0 "Addressing the World"
+  
+  PB_RUS_The_Russian_Century:0 "The Russian Century"
+  PB_RUS_Okhrana_Operations_Asia:0 "Okhrana Operations: §YAsia§!"
   PB_RUS_Peninsular_Security:0 "Peninsular Security"
-  PB_RUS_Enforce_Containment_Policy:0 "Containment Policy"
-  PB_RUS_Enforce_Containment_Policy_desc:0 "The cunning Jap is at it again. The revolutionary government there is proving to be no different than the imperial government they toppled. It is necessary to clamp down hard on them and contain their foul influence to their accursed islands so we do not get bogged down in another Siberian Campaign against them and their allies."
-  PB_RUS_Contain_Zhongyings_forces:0 "Contain Zhongying's Forces"
-  PB_RUS_Support_Norwegian_Independence:0 "Support Norwegian Independence"
-  PB_RUS_Support_Kurdish_Irredentism:0 "Support Kurdish Irredentism"
-  PB_RUS_Deploy_the_Okhrana_in_Prussia:0 "Deploy the Okhrana in Prussia"
-  PB_RUS_Deploy_the_Okhrana_in_Prussia_desc:0 "Ah, Prussia, the one that got away. Though for the most part, they have been behaved well enough to keep them out of our focuses, recently the government in Konigsburg has gotten uppity and has began working against us. We should send in the Okhrana to remind of them of their place."
-  PB_RUS_Reinforce_the_hungarian_border:0 "Reinforce the Hungarian Border"
-  PB_RUS_Reinforce_the_hungarian_border_desc:0 "During the National Awakening in the 1920s, the Hungarian border was left unguarded, and as a result, weapons from the degenerate government in Budapest flowed with abandon to the rebels. Even after the uprisings were crushed, Hungarian weapons trickled into the rump Galician government's territory, empowering the stubborn rebels there. Now, with the failure of a bulwark removed, it is time we reenforce the border so no more of these accursed weapons end up in rebel hands."
-  PB_RUS_Dreams_of_a_russian_colony:0 "Dreams of a Russian Colony"
-  PB_RUS_Dreams_of_a_russian_colony_desc:0 "In the Horn of Africa lies the Sagello, a seemingly out of place Cossack Host. However, their existence could prove beneficial to our ambitions in the region. We should begin overtures with the leaders of the Host to see if we can at least use their territory as a staging ground for our troops, which will allow us to exert influence in the region and threaten British holdings in Somalia and Yemen."
-  PB_RUS_Cleaning_up_our_Balkan_Mess:0 "Cleaning up our Balkan Mess"
-  PB_RUS_Retain_our_commitments_to_Serbia:0 "Retain our Commitments to Serbia"
-  PB_RUS_Retain_our_commitments_to_Serbia_desc:0 "Our little brother in the Balkans, Serbia, is preparing for a coming clash with the foul revolutionaries in Hungary and their Bulgarian allies. We should assist them so they will regain the honor and sanity of Serbdom. This will prove useful later down the line."
-  PB_RUS_Reorient_towards_the_bulgars:0 "Reorient towards the Bulgars"
-  PB_RUS_Reorient_towards_the_bulgars_desc:0 "The Serbs, despite our brotherhood, are not bordering our Tsargrad holding. On the other hand, there is Bulgaria, which does border Tsargrad. Their alliance with the Jacobins in Budapest, impromptu it may be, is something that should be fixed at once. We will begin work on drawing them out of their impromptu alliance with the Jacobins in Budapest and bringing them firmly into our sphere, even though it may cost us our Serbian allies. We installed the Bulgarian prince, so hopefully they will be receptive to our overtures."
-  PB_RUS_Pressure_the_qajars:0 "Pressure the Qajars"
-  PB_RUS_Offer_advisors_to_the_Greeks:0 "Offer Advisors to the Greeks"
-  PB_RUS_Reinforce_occupied_Germany:0 "Reinforce Occupied Germany"
-  PB_RUS_Seize_the_swedish_baltic:0 "Seize the Swedish Baltic"
-  PB_RUS_Sway_the_Norwegians:0 "Sway the Norwegians"
-  PB_RUS_Funnel_support_to_kristiana:0 "Funnel support to Kristiana"
-  PB_RUS_The_romanov_crown_in_kristiana:0 "The Romanov Crown in Kristiana"
-  PB_RUS_Anywhere_but_Nuremburg:0 "Anywhere but Nuremburg"
-  PB_RUS_Close_the_border:0 "Close the Borders"
-  PB_RUS_Determine_the_future_of_the_occuption:0 "Determine the Future of the Occupation"
+  PB_RUS_The_Red_Menace:0 "The Red Menace"
+  PB_RUS_Okhrana_Operations_Scandinavia:0 "Okhrana Operations: §YScandinavia§!"
+  PB_RUS_Safeguard_The_Artic:0 "Safeguard The Artic"
+  PB_RUS_The_Romanov_Crown_In_Kristiana:0 "The Romanov Crown In Kristiana"
+  PB_RUS_Conclude_The_Finnish_Campaign:0 "Conclude The Finnish Campaign"
+  PB_RUS_Seize_The_Swedish_Baltic:0 "Seize The Swedish Baltic"
+  PB_RUS_Okhrana_Operations_Balkans:0 "Okhrana Operations: §YBalkans§!"
+  PB_RUS_Support_The_Bulgarians:0 "Support The Bulgarians"
+  PB_RUS_Support_The_Serbians:0 "Support The Serbians"
+  PB_RUS_The_Greek_Gambit:0 "The Greek Gambit"
+  PB_RUS_Fortify_The_Hungarian_Border:0 "Fortify The Hungarian Border"
+  PB_RUS_Okhrana_Operations_Middle_East:0 "Okhrana Operations: §YMiddle East§!"
+  PB_RUS_The_Enemy_Of_My_Enemy:0 "The Enemy Of My Enemy"
+  PB_RUS_Pressure_Tehran:0 "Pressure Tehran"
+  PB_RUS_The_Graveyard_Of_Empires:0 "The Graveyard of Empires"
+  PB_RUS_Okhrana_Operations_Africa:0 "Okhrana Operations: §YAfrica§!"
+  PB_RUS_Ally_With_The_Negus:0 "Ally With The Negus"
+  PB_RUS_Sagallo_Overtures:0 "Sagallo Overtures"
+  PB_RUS_The_Dark_Continent:0 "The Dark Continent"
+
+  PB_RUS_The_Guns_Fall_Silent:0 "The Guns Fall Silent"
+  PB_RUS_The_American_Question:0 "The American Question"
+  PB_RUS_The_Philadelphia_Accords:0 "The Philadelphia Accords"
+  PB_RUS_The_One_Last_War:0 "One Last War"
+  PB_RUS_The_Russo_American_Empire:0 "The Russo American Empire"
+  PB_RUS_Imperial_Duopoly:0 "Imperial Duopoly"
+  PB_RUS_The_Iron_Curtain:0 "The Iron Curtain"
+  PB_RUS_Facing_Reality:0 "Facing Reality"
+  PB_RUS_Continental_Hegemony:0 "Continental Hegemony"
+  PB_RUS_Mop_Up_The_Leftovers:0 "Mop Up The Leftovers"
+  PB_RUS_Empire_Of_The_Slavs:0 "Empire Of The Slavs"
+  PB_RUS_Pax_Russica:0 "Pax Russica"
+  PB_RUS_Count_The_Dead:0 "Count The Dead"
+  PB_RUS_Extort_The_Defeated:0 "Extort The Defeated"
+  PB_RUS_All_Empires_Die:0 "All Empires Die"
+  PB_RUS_Fund_The_Promethus_Project:0 "Fund The Promethus Project"
+  PB_RUS_To_Become_Gods:0 "To Become Gods"
+  
 
   PB_RUS_The_Imperial_Military_Office:0 "The Imperial Military Office"
   PB_RUS_Spector_Of_The_East:0 "Spector Of The East"
@@ -879,35 +892,6 @@
   PB_RUS_Eat_The_Fields:0 "Eat The Fields"
   PB_RUS_Winter_Theories:0 "Winter Theories"
 
-  PB_RUS_Sweet_Revenge:0 "Sweet Revenge"
-  PB_RUS_Sweet_Revenge_desc:0 ""
-  PB_RUS_Proclaim_Tsargrad_Accords:0 "Proclaim the Tsargrad Accords"
-  PB_RUS_Proclaim_Tsargrad_Accords_desc:0 ""
-  PB_RUS_Seize_African_Opportunity:0 "Seize the African Opportunity"
-  PB_RUS_Seize_African_Opportunity_desc:0 ""
-  PB_RUS_Deturkification:0 "De-Turkification"
-  PB_RUS_Deturkification_desc:0 ""
-  PB_RUS_Beacon_European_Democracy:0 "Beacon of European Democracy"
-  PB_RUS_Beacon_European_Democracy_desc:0 ""
-  PB_RUS_Deport_Eastern_Germans:0 "Deport Eastern Germans"
-  PB_RUS_Deport_Eastern_Germans_desc:0 ""
-  PB_RUS_Denounce_Decadent_West:0 "Denounce Western Decadence"
-  PB_RUS_Denounce_Decadent_West_desc:0 ""
-  PB_RUS_Sudetenland_Conference:0 "Sudetenland Conference"
-  PB_RUS_Sudetenland_Conference_desc:0 ""
-  PB_RUS_Squeeze_Home_Islands:0 "Squeeze the Home Islands"
-  PB_RUS_Squeeze_Home_Islands_desc:0 ""
-  PB_RUS_Eastern_Adjustments:0 "Eastern Adjustments"
-  PB_RUS_Eastern_Adjustments_desc:0 ""
-  PB_RUS_Postdam_Conference:0 "Postdam Conference"
-  PB_RUS_Postdam_Conference_desc:0 ""
-  PB_RUS_Expand_Power_Projection:0 "Expand Power Projection"
-  PB_RUS_Expand_Power_Projection_desc:0 ""
-  PB_RUS_Hot_Wind_Blowing:0 "Hot Wind Blowing"
-  PB_RUS_Hot_Wind_Blowing_desc:0 ""
-  PB_RUS_Uneasy_Peace:0 "An Uneasy Peace"
-  PB_RUS_Uneasy_Peace_desc:0 ""
-  
 
   ########################## 
   # Decisions
