Russian Foreign Policy Tree stoof

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -556,10 +556,25 @@
   postwar_russia.6.b:0 "Grant Germany the Eastern Sudetenland too."
   postwar_russia.6.c:0 "Grant the territory to Bohemia."
 
+  Russian_Foreign_Policy.1.t:0 "Russia Offers Us An Out"
+  Russian_Foreign_Policy.1.d:0 ""
+  Russian_Foreign_Policy.1.a:0 "Down with the Danes!"
+  Russian_Foreign_Policy.1.b:0 "We'd rather be a puppet of the Danish"
+
   Russian_Foreign_Policy.4.t:0 "Russia Seeks Expansion of Pipeline"
   Russian_Foreign_Policy.4.d:0 ""
   Russian_Foreign_Policy.4.a:0 "A mutually beneficial agreement."
   Russian_Foreign_Policy.4.b:0 "Absolutely not."
+
+  Russian_Foreign_Policy.5.t:0 "Non-Aggression Pact With Russia?"
+  Russian_Foreign_Policy.5.d:0 ""
+  Russian_Foreign_Policy.5.a:0 "A mutually beneficial agreement."
+  Russian_Foreign_Policy.5.b:0 "Absolutely not."
+
+  Russian_Foreign_Policy.6.t:0 "Constantinople For An Alliance?"
+  Russian_Foreign_Policy.6.d:0 ""
+  Russian_Foreign_Policy.6.a:0 "A mutually beneficial agreement."
+  Russian_Foreign_Policy.6.b:0 "Absolutely not."
 
   Russian_Flavour.6.t:0 "An Impossible Deadline"
   Russian_Flavour.6.d:0 "The Tsar sat regally at his grand desk, surrounded by a small army of engineers and bureaucrats. They were all part of the committee that drafted the ambitious proposal and plans for the Trans-American Pipeline, aiming to tap into the oil-hungry markets of the slowly developing American West. Every conceivable aspect had been discussed, from projected profits to budget allocations and the choice of materials. Now, all they needed was the Tsar’s approval for such a massive undertaking.\n\nThe lilliputian bureaucrat who headed the committee, a man whose name the Tsar had long forgotten, seemed to drone on like an automaton for eternity on the trivial details of the pipeline. It was likely an attempt to assassinate the Tsar by sheer boredom.\n\n"Costs are estimated to run into the tens of millions," the bureaucrat continued, "but Tesla Electrickworks executives have offered to fund portions of the project if it opens the markets of the Wild West to them. However, large projects like this are also prone to cost overruns and corruption, which would push the costs even higher. The various factions in the Duma have also reacted diversely to the project, expressing everything from undying encouragement to the strongest opposition. The nationalists in the Duma have voiced..."\n\nThe Tsar’s eyelids grew heavy as the pull of sleep became almost irresistible. The bureaucrat was completely unaware and continued with his presentation. As he approached the end of his lecture, the Tsar returned to attention when the deadline was announced.\n\n"The estimated time of completion is around eight to ten years."\n\nThe Tsar scoffed in disbelief and waited for the punchline. He quickly realized that the official was serious about the timeline. He could hardly believe his ears; his country was among the very vanguard of technological progress, the home of the Second Renaissance. The notion of waiting a decade to penetrate the Western markets was preposterous. He was the Tsar, after all; he didn’t bend his will to the world—the world bent its will to him. He looked at the bureaucrat and uttered a single sentence."
@@ -826,7 +841,7 @@
   PB_RUS_Okhrana_Operations_Scandinavia:0 "Okhrana Operations: §YScandinavia§!"
   PB_RUS_Safeguard_The_Artic:0 "Safeguard The Artic"
   PB_RUS_The_Romanov_Crown_In_Kristiana:0 "The Romanov Crown In Kristiana"
-  PB_RUS_Conclude_The_Finnish_Campaign:0 "Conclude The Finnish Campaign"
+  PB_RUS_Integrate_The_Finnish_Admin:0 "Integrate The Finnish Administration"
   PB_RUS_Seize_The_Swedish_Baltic:0 "Seize The Swedish Baltic"
   PB_RUS_Okhrana_Operations_Balkans:0 "Okhrana Operations: §YBalkans§!"
   PB_RUS_Support_The_Bulgarians:0 "Support The Bulgarians"
@@ -1180,6 +1195,12 @@
   PB_RUS_Blessings_of_the_Ladder:0 "Blessing of the Ladder"
   PB_RUS_Blessings_of_the_Archangel:0 "Blessing of the Archangel"
 
+  PB_RUS_Faction_Expansion:0 "The Russian Sphere Of Influence"
+  PB_RUS_Invite_Korea:0 "Invite Korea To Our Faction"
+  PB_RUS_Invite_Norway:0 "Invite Norway To Our Faction"
+  PB_RUS_Invite_Bulgaria:0 "Invite Bulgaria To Our Faction"
+  PB_RUS_Invite_Serbia:0 "Invite Serbia To Our Faction"
+
   ##########################
   # BALANCE OF POWER
   ##########################  
@@ -1398,6 +1419,13 @@
   PB_RUS_Consecrate_the_Libraries_tt:0 "If Russia currently owns greater than §Y10 Research Centres§! then an §Gadditional research slot§! will be granted"
   PB_RUS_theo_transhumanism_tt:0 "§HAugemented Units§! gain the following:\n§YHardsuits§!:\n - Soft Attack: §G+5.0%§!\n - Defense: §G+5.0%§!\n§YRazormaidens§!:\n - Soft Attack: §G+5.0%§!\n - Defense: §G+5.0%§!"
   PB_RUS_An_Empire_of_Faith_tt:0 "§HOlga I§! becomes a Field Marshal."
+
+  PB_RUS_KOR_sphere_tt:0 "\n§HKorean§! joins the §GRussian Sphere of Influence§!"
+  PB_RUS_Support_The_Bulgarians_tt:0 "§HBulgaria§! joins the §GRussian Sphere of Influence§!"
+  PB_RUS_Support_The_Serbians_tt:0 "§HSerbia§! joins the §GRussian Sphere of Influence§!"
+  PB_RUS_The_Red_Menace_tt:0 "Every country in our sphere of influence will embargo Japan"
+  PB_RUS_The_Romanov_Crown_In_Kristiana_tt:0 "\nShould Norway accept (there is a §Y40%§! chance that they do) then a §GRussian Monarchy§! will be installed in Norway"
+  PB_RUS_The_Greek_Gambit_tt:0 "\nShould Greece accept (there is a §Y80%§! chance that they do) then Constantinople will be transfered to them and they will §Gjoin our alliance§!"
 
   #######################
   # ARMY SPIRITS
