More Russia tree stoof

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -841,7 +841,7 @@
   PB_RUS_Okhrana_Operations_Scandinavia:0 "Okhrana Operations: §YScandinavia§!"
   PB_RUS_Safeguard_The_Artic:0 "Safeguard The Artic"
   PB_RUS_The_Romanov_Crown_In_Kristiana:0 "The Romanov Crown In Kristiana"
-  PB_RUS_Integrate_The_Finnish_Admin:0 "Integrate The Finnish Administration"
+  PB_RUS_Integrate_The_Finnish_Admin:0 "Annex The Finnish Administration"
   PB_RUS_Seize_The_Swedish_Baltic:0 "Seize The Swedish Baltic"
   PB_RUS_Okhrana_Operations_Balkans:0 "Okhrana Operations: §YBalkans§!"
   PB_RUS_Support_The_Bulgarians:0 "Support The Bulgarians"
@@ -1200,6 +1200,9 @@
   PB_RUS_Invite_Norway:0 "Invite Norway To Our Faction"
   PB_RUS_Invite_Bulgaria:0 "Invite Bulgaria To Our Faction"
   PB_RUS_Invite_Serbia:0 "Invite Serbia To Our Faction"
+  PB_RUS_Invite_Persia:0 "Invite Persia To Our Faction"
+  PB_RUS_Invite_Ethopia:0 "Invite Abyssinia To Our Faction"
+  PB_RUS_Invite_Sagallo:0 "Invite Sagallo To Our Faction"
 
   ##########################
   # BALANCE OF POWER
@@ -1426,6 +1429,10 @@
   PB_RUS_The_Red_Menace_tt:0 "Every country in our sphere of influence will embargo Japan"
   PB_RUS_The_Romanov_Crown_In_Kristiana_tt:0 "\nShould Norway accept (there is a §Y40%§! chance that they do) then a §GRussian Monarchy§! will be installed in Norway"
   PB_RUS_The_Greek_Gambit_tt:0 "\nShould Greece accept (there is a §Y80%§! chance that they do) then Constantinople will be transfered to them and they will §Gjoin our alliance§!"
+  PB_RUS_The_Enemy_Of_My_Enemy_tt:0 "§HPersia§! joins the §GRussian Sphere of Influence§!"
+  PB_RUS_Ally_With_The_Negus_tt:0 "§HAbyssinia§! joins the §GRussian Sphere of Influence§!"
+  PB_RUS_Sagallo_Overtures_tt:0 "§HSagallo§! joins the §GRussian Sphere of Influence§!"
+  PB_RUS_The_Dark_Continent_tt:0 "If we supported §HAbyssinia§! then they will §Gbecome our subject§!, if we supported the §HSagallo Cossack Host§! instead then they will §Gbecome our subject§!"
 
   #######################
   # ARMY SPIRITS
