lots of changes
-russian cultures desc
-2 new states, 3 new cultures
- fixed grain and rare metals desc
-better japan stab and ws
-RET and ETH better OOB
-numerous changes to russian state and VP names
-fixed state name numeration
-dynamic petrograd megacity name
-flame tanks are back (yipee)
-better native names from russian foci
-old defines removed

--- a/localisation/english/PB_Mega_Cities_l_english.yml
+++ b/localisation/english/PB_Mega_Cities_l_english.yml
@@ -8,6 +8,7 @@
   FRA_Mega_City_Name:0 "§ONEW PARIS§!"
   GER_Mega_City_Name:0 "§OGERMANIA§!"
   RUS_Mega_City_Name:0 "§OGREATER ST. PETERSBURG§!"
+  RUS_Mega_City_Name_alt:0 "§OGREATER PETROGRAD§!"
   AME_Mega_City_Name1:0 "§OMELBOURNE SPRAWL§!"
   AME_Mega_City_Name2:0 "§OEMPIRE SUPERCOMPLEX§!"
 
