--- a/localisation/english/core_l_english.yml
+++ b/localisation/english/core_l_english.yml
@@ -964,7 +964,8 @@
  rubber_desc:0 "Rubber is important for the construction of most vehicles."
  tungsten_desc:0 "Tungsten is a rare hard metal mainly used for anti-tank munitions, but also machine tools and specialized parts."
  steel_desc:0 "Steel is the primary metal for most types of military machinery, whether it be tanks or ships."
- chromium_desc:0 "Chromium is a metal used for the construction of advanced engines."
+ chromium_desc:0 "Various metals used in advanced engines or for alloying."
+ grain_desc:0 "Agriculture products needed for food and rations production."
  CLAIM_LIST_DESC:0 "Countries with claims on this state."
  SUPPLY_MAPICON_SUPPORTED_LIMITED_DESC:0 "This node could support more supplies, but is limited by some §R'bottlenecks'§! in its route.\nConsider improving §Ginfrastructure§! along the route.\nImprove also the naval bases if the route includes the sea path.\nThink then about necessary amount of convoys and escorts."
  SUPPLY_MAPICON_SUPPORTED_DESC:0 "This node supports enough supplies so far.\nThink that the usage will raise as more troops are in the area."
