--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -9,9 +9,9 @@
  STATE_8:0 "Luxembourg"
  STATE_9:0 "Bohemia"
  STATE_10:0 "Warszawa"
- STATE_11:0 "Kaunas"
- STATE_12:0 "Vidzeme"
- STATE_13:0 "Harju"
+ STATE_11:0 "Kovno"
+ STATE_12:0 "Liflyandiya"
+ STATE_13:0 "Garrien"
  STATE_14:0 "Brittany"
  STATE_15:0 "Normandy"
  STATE_16:0 "Ile de France"
@@ -93,9 +93,9 @@
  STATE_92:0 "Lublin"
  STATE_93:0 "Wolyn"
  STATE_94:0 "Polesie"
- STATE_95:0 "Nowogrodek"
- STATE_96:0 "Pastawy"
- STATE_97:0 "Bialystok"
+ STATE_95:0 "Grodno"
+ STATE_96:0 "Postavy"
+ STATE_97:0 "Byelostok"
  STATE_98:0 "Plock"
  STATE_99:0 "Jutland"
  STATE_100:0 "Iceland"
@@ -144,7 +144,7 @@
  STATE_143:0 "Trondelag"
  STATE_144:0 "Nord-Norge"
  STATE_145:0 "Aland"
- STATE_146:0 "Karjala"
+ STATE_146:0 "Kareliya"
  STATE_147:0 "Bay Islands"
  STATE_148:0 "Lappi"
  STATE_149:0 "Pohjanmaa"
@@ -187,20 +187,20 @@
  STATE_186:0 "Peloponnese"
  STATE_187:0 "Aegean Islands"
  STATE_188:0 "Memel"
- STATE_189:1 "Siauliai"
- STATE_190:0 "Kurzeme"
- STATE_191:0 "Tartu"
+ STATE_189:1 "Zhemaitiya"
+ STATE_190:0 "Kurlandya"
+ STATE_191:0 "Dorpat"
  STATE_192:0 "Odessa"
  STATE_193:0 "Chernihiv"
  STATE_194:0 "Mozyr"
  STATE_195:0 "St. Petersburg"
- STATE_196:0 "Kherson"
- STATE_197:0 "Mykolaiv"
+ STATE_196:0 "Nadchornomoria"
+ STATE_197:0 "Nikolayev"
  STATE_198:0 "Vinnytsia"
- STATE_199:0 "Khmelnytskyi"
- STATE_200:0 "Zaporozhe"
- STATE_201:0 "Zhytomyr"
- STATE_202:0 "Kiev"
+ STATE_199:0 "Proskurov"
+ STATE_200:0 "Aleksandrovsk"
+ STATE_201:0 "Zhitomir"
+ STATE_202:0 "Kiyev"
  STATE_203:0 "Cherkasy"
  STATE_204:0 "Bobruysk"
  STATE_205:0 "Kaluga"
@@ -224,9 +224,9 @@
  STATE_223:0 "Tula"
  STATE_224:0 "Bryansk"
  STATE_225:0 "Sumy"
- STATE_226:0 "Dnipropetrovsk"
+ STATE_226:0 "Yekaterinoslav"
  STATE_227:0 "Yuzivka"
- STATE_228:0 "Luhansk"
+ STATE_228:0 "Lugansk"
  STATE_229:1 "Azerbaijan"
  STATE_230:0 "Armenia"
  STATE_231:0 "Georgia"
@@ -236,7 +236,7 @@
  STATE_235:0 "Transkuban"
  STATE_236:0 "Astrakhan"
  STATE_237:0 "Kalmykia"
- STATE_238:0 "Volgodonsk"
+ STATE_238:0 "Stavropol"
  STATE_239:0 "Saratov"
  STATE_240:0 "Belgorod"
  STATE_241:0 "Gomel"
@@ -250,7 +250,7 @@
  STATE_249:0 "Tatarstan"
  STATE_250:0 "Simbirsk"
  STATE_251:0 "Samara"
- STATE_252:0 "Nizhnegorod"
+ STATE_252:0 "Nizhny Novgorod"
  STATE_253:0 "Ivanovo"
  STATE_254:0 "Ryazan"
  STATE_255:0 "Penza"
@@ -261,7 +261,7 @@
  STATE_260:0 "Voronezh"
  STATE_261:0 "Ohio"
  STATE_262:0 "Nenetsia"
- STATE_263:0 "Novgorod"
+ STATE_263:0 "Veliky Novgorod"
  STATE_264:0 "Tikhvin"
  STATE_265:0 "Mikhaylovka"
  STATE_266:0 "Tehran"
@@ -399,7 +399,7 @@
  STATE_398:0 "Perm"
  STATE_399:0 "Udmurtia"
  STATE_400:0 "Vyatka"
- STATE_401:0 "Pokrovsk"
+ STATE_401:0 "Kosakenstadt"
  STATE_402:0 "Akhtubinsk"
  STATE_403:0 "Tyumen"
  STATE_404:0 "Kyzyl Orda"
@@ -407,7 +407,7 @@
  STATE_406:0 "Guryev"
  STATE_407:0 "Uralsk"
  STATE_408:0 "Vladivostok"
- STATE_409:0 "Amur"
+ STATE_409:0 "Priamurye"
  STATE_410:0 "Sistan"
  STATE_411:0 "Isfahan"
  STATE_412:0 "Fars"
@@ -559,7 +559,7 @@
  STATE_558:0 "Central Nigeria"
  STATE_559:0 "Southern Somaliland"
  STATE_560:0 "Nikolayevsk"
- STATE_561:0 "Priamurye"
+ STATE_561:0 "Amur"
  STATE_562:0 "Okhotsk"
  STATE_563:0 "Chita"
  STATE_564:0 "Buryatia"
@@ -578,7 +578,7 @@
  STATE_577:0 "Surgut"
  STATE_578:0 "Tomsk"
  STATE_579:0 "Yamalia"
- STATE_580:0 "Khanty-Mansi"
+ STATE_580:0 "Ostyak-Vogul"
  STATE_581:0 "Northern Urals"
  STATE_582:0 "Magnitogorsk"
  STATE_583:0 "Kustanay"
@@ -587,7 +587,7 @@
  STATE_586:0 "Tengri Tagh"
  STATE_587:0 "Mangystau"
  STATE_588:0 "Semipalatinsk"
- STATE_589:0 "Alma-Ata"
+ STATE_589:0 "Verny"
  STATE_590:0 "Akmolinsk"
  STATE_591:0 "Hainan"
  STATE_592:0 "Guangzhou"
@@ -782,7 +782,7 @@
  STATE_781:0 "Niamey"
  STATE_782:0 "Taoudenni"
  STATE_783:0 "Walvis Bay"
- STATE_784:1 "Wilno"
+ STATE_784:1 "Vilna"
  STATE_785:0 "Picardy"
  STATE_786:0 "Oualata"
  STATE_787:0 "Northern Kashmir"
@@ -858,7 +858,7 @@
  STATE_857:0 "Oostkaap"
  STATE_858:0 "Vrije Staat"
  STATE_859:0 "Swaziland"
- STATE_860:0 "Northern Nigeria"
+ STATE_860:0 "Sokoto"
  STATE_861:0 "Azawad"
  STATE_862:0 "Biafra"
  STATE_863:0 "Oyo"
@@ -866,17 +866,16 @@
  STATE_865:0 "East Kenya"
  STATE_866:0 "Buganda"
  STATE_867:0 "Mombasa"
- STATE_868:0 "Garanganze"
- STATE_869:0 "Barotseland"
- STATE_870:0 "Zanzibaria"
- STATE_871:0 "Maasaria"
- STATE_872:0 "Nyamwezia"
- STATE_873:0 "Azande"
- STATE_874:0 "Chokweland"
- STATE_876:0 "North Angola"
- STATE_KIVU:0 "Kivuland"
- STATE_OGG:0 "Ogaden"
- STATE_GAMB:0 "Gambela"
+ STATE_868:0 "Barotseland"
+ STATE_869:0 "Zanzibaria"
+ STATE_870:0 "Maasaria"
+ STATE_871:0 "Nyamwezia"
+ STATE_872:0 "Azande"
+ STATE_873:0 "Chokweland"
+ STATE_874:0 "North Angola"
+ STATE_875:0 "Kivuland"
+ STATE_876:0 "Ogaden"
+ STATE_877:0 "Gambela"
  STATE_878:0 "Oromia"
  STATE_879:0 "Gazaland"
  STATE_880:0 "Al-Kharijah"
@@ -911,15 +910,15 @@
  STATE_909:0 "West-Rhineland"
  STATE_910:0 "Zeeuws-Vlaanderen"
  STATE_911:0 "Rotterdam-Zeeland"
- STATE_918:0 "Borkou"
- STATE_919:0 "Wadi Fira"
- STATE_920:0 "North Carnegia"
  STATE_912:0 "Brunei"
  STATE_913:0 "Andorra"
  STATE_914:0 "Monaco"
  STATE_915:0 "Vatican City"
  STATE_916:0 "Singapore"
  STATE_917:0 "Hamburg"
+ STATE_918:0 "Borkou"
+ STATE_919:0 "Wadi Fira"
+ STATE_920:0 "North Carnegia"
  STATE_921:0 "Orol"
  STATE_922:0 "South Carnegia"
  STATE_923:0 "Friaul"
@@ -939,8 +938,22 @@
  STATE_937:0 "Salamanca"
  STATE_938:0 "Guadalajara"
  STATE_939:0 "Cuzco"
+ STATE_940:0 "Romande"
+ STATE_941:0 "Kansas"
+ STATE_942:0 "Marooner"
+ STATE_943:0 "Rainy River"
+ STATE_944:0 "Norton"
+ STATE_945:0 "Pine Nut Mountains"
+ STATE_946:0 "Southern Rio Grande"
+ STATE_947:0 "Northern Rio Grande"
  STATE_948:0 "Stephens"
+ STATE_949:0 "Sulvalki"
  STATE_950:0 "Cavelier"
+ STATE_951:0 "Latgaliya"
+ STATE_952:0 "Ezel"
+ STATE_953:0 "Zemgalya"
+ STATE_954:0 "Central Cordillera"
+ STATE_955:0 "Llano Estacado"
  STATE_956:0 "Northern Ergun"
  STATE_957:0 "Mississippi"
  STATE_958:0 "Cumberland"
@@ -952,3 +965,6 @@
  STATE_964:0 "Santa Anna"
  STATE_965:0 "San Sansa"
  STATE_966:0 "Albuquerque"
+ STATE_967:0 "Empire"
+ STATE_968:0 "Mari"
+ STATE_969:0 "Mordovia"
