--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -45,19 +45,19 @@
  VICTORY_POINTS_3544:0 "Warsaw"
  VICTORY_POINTS_9427:0 "Krakow"
  VICTORY_POINTS_362:0 "Danzig"
- VICTORY_POINTS_11301:0 "Białystok"
- VICTORY_POINTS_572:0 "Luzk"
+ VICTORY_POINTS_11301:0 "Byelostok"
+ VICTORY_POINTS_572:0 "Lutsk"
  VICTORY_POINTS_560:0 "Pinsk"
  VICTORY_POINTS_6232:0 "Mosyr"
- VICTORY_POINTS_3350:0 "Bobruisk"
- VICTORY_POINTS_9289:0 "Mogiljow"
- VICTORY_POINTS_11391:0 "Pastawy"
+ VICTORY_POINTS_3350:0 "Bobruysk"
+ VICTORY_POINTS_9289:0 "Mogilyov"
+ VICTORY_POINTS_11391:0 "Postavy"
  VICTORY_POINTS_186:0 "Kotlas"
- VICTORY_POINTS_6121:0 "Syktywkar"
+ VICTORY_POINTS_6121:0 "Ust-Sysolsk"
  VICTORY_POINTS_4640:0 "Narva"
- VICTORY_POINTS_9304:0 "Baranavichy"
- VICTORY_POINTS_3320:0 "Wilno"
- VICTORY_POINTS_3392:0 "Brzesc Litewski"
+ VICTORY_POINTS_9304:0 "Baranovichi"
+ VICTORY_POINTS_3320:0 "Vilna"
+ VICTORY_POINTS_3392:0 "Brest-Litovsk"
  VICTORY_POINTS_3393:0 "Grodno"
  VICTORY_POINTS_6558:0 "Poznań"
  VICTORY_POINTS_9508:0 "Lodz"
@@ -239,17 +239,17 @@
  VICTORY_POINTS_3083:0 "Turku"
  VICTORY_POINTS_3122:0 "Vaasa"
  VICTORY_POINTS_3137:0 "Tampere"
- VICTORY_POINTS_9206:0 "Viipuri"
- VICTORY_POINTS_3152:0 "Tallinn"
- VICTORY_POINTS_9221:0 "Tartu"
+ VICTORY_POINTS_9206:0 "Vyborg"
+ VICTORY_POINTS_3152:0 "Reval"
+ VICTORY_POINTS_9221:0 "Dorpat"
  VICTORY_POINTS_9340:0 "Riga"
- VICTORY_POINTS_310:0 "Daugavpils"
+ VICTORY_POINTS_310:0 "Dvinsk"
  VICTORY_POINTS_1734:0 "Duluth"
  VICTORY_POINTS_4029:0 "Eau Claire"
  VICTORY_POINTS_4166:0 "La Baie des Puants"
  VICTORY_POINTS_12456:0 "Doty"
- VICTORY_POINTS_6296:0 "Kaunas"
- VICTORY_POINTS_9483:1 "Siauliai"
+ VICTORY_POINTS_6296:0 "Kovno"
+ VICTORY_POINTS_9483:1 "Shavli"
  VICTORY_POINTS_6103:0 "London"
  VICTORY_POINTS_3273:0 "Glasgow"
  VICTORY_POINTS_9297:0 "Birmingham"
@@ -265,22 +265,22 @@
  VICTORY_POINTS_11293:0 "Dublin"
  VICTORY_POINTS_7394:0 "Cork"
  VICTORY_POINTS_6380:0 "Moscow"
- VICTORY_POINTS_525:0 "Kiev"
+ VICTORY_POINTS_525:0 "Kiyev"
  VICTORY_POINTS_3529:0 "Tsaritsyn"
  VICTORY_POINTS_6174:0 "St. Petersburg"
  VICTORY_POINTS_6474:0 "Yuzivka"
  VICTORY_POINTS_9417:0 "Rostov-na-Donu"
- VICTORY_POINTS_11375:0 "Nizhnegorod"
- VICTORY_POINTS_117:0 "Novgorod"
+ VICTORY_POINTS_11375:0 "Nizhny Novgorod"
+ VICTORY_POINTS_117:0 "Veliky Novgorod"
  VICTORY_POINTS_121:0 "Yaroslavl"
  VICTORY_POINTS_306:0 "Smolensk"
  VICTORY_POINTS_9197:0 "Volkhov"
- VICTORY_POINTS_149:0 "Wsewoloschsk"
+ VICTORY_POINTS_149:0 "Vsevolozhsk"
  VICTORY_POINTS_11032:0 "Gatchina"
  VICTORY_POINTS_6095:0 "Kirishi"
- VICTORY_POINTS_9190:0 "Lodeynoe Pole"
+ VICTORY_POINTS_9190:0 "Lodeynoye Pole"
  VICTORY_POINTS_413:0 "Voronezh"
- VICTORY_POINTS_418:0 "Kharkiv"
+ VICTORY_POINTS_418:0 "Kharkov"
  VICTORY_POINTS_7203:0 "Agadir"
  VICTORY_POINTS_4108:0 "Marrakesch"
  VICTORY_POINTS_7100:0 "Fès"
@@ -289,8 +289,8 @@
  VICTORY_POINTS_957:0 "Vladivostok"
  VICTORY_POINTS_6989:0 "Ussuriysk"
  VICTORY_POINTS_6961:0 "Nachodka"
- VICTORY_POINTS_664:0 "Dalneretschensk"
- VICTORY_POINTS_9604:0 "Wanino"
+ VICTORY_POINTS_664:0 "Iman"
+ VICTORY_POINTS_9604:0 "Imperatorskaya Gavan"
  VICTORY_POINTS_291:0 "Ufa"
  VICTORY_POINTS_7081:0 "Annaba"
  VICTORY_POINTS_10059:0 "Batna"
@@ -305,16 +305,16 @@
  VICTORY_POINTS_12000:0 "Tataouine"
  VICTORY_POINTS_1459:0 "Tashkent"
  VICTORY_POINTS_10875:0 "Dakhla"
- VICTORY_POINTS_1591:0 "Alma-Ata"
- VICTORY_POINTS_1599:0 "Tbilisi"
+ VICTORY_POINTS_1591:0 "Verny"
+ VICTORY_POINTS_1599:0 "Tifilis"
  VICTORY_POINTS_1821:0 "Yekaterinburg"
- VICTORY_POINTS_3134:0 "Muurmanni"
+ VICTORY_POINTS_3134:0 "Murmansk"
  VICTORY_POINTS_3140:0 "Tikhvin"
  VICTORY_POINTS_3335:0 "Bryansk"
  VICTORY_POINTS_3338:0 "Arkhangelsk"
  VICTORY_POINTS_3578:0 "Saratov"
  VICTORY_POINTS_3580:0 "Kursk"
- VICTORY_POINTS_3653:0 "Batumi"
+ VICTORY_POINTS_3653:0 "Batum"
  VICTORY_POINTS_8098:0 "Kalat"
  VICTORY_POINTS_8007:0 "Multan"
  VICTORY_POINTS_1321:0 "Thiruvananthapuram"
@@ -325,40 +325,43 @@
  VICTORY_POINTS_11371:0 "Sligo"
  VICTORY_POINTS_385:0 "Londonderry"
  VICTORY_POINTS_3672:0 "Grozny"
- VICTORY_POINTS_6727:0 "Bélgorod-Dnestróvskiy"
+ VICTORY_POINTS_6727:0 "Akkerman"
  VICTORY_POINTS_3707:0 "Kishinev"
  VICTORY_POINTS_3755:0 "Kherson"
- VICTORY_POINTS_6593:0 "Schitomir"
- VICTORY_POINTS_3568:0 "Tschernigow"
- VICTORY_POINTS_11504:0 "Poltawa"
- VICTORY_POINTS_11546:0 "Nikolajew"
+ VICTORY_POINTS_6593:0 "Zhitomir"
+ VICTORY_POINTS_3568:0 "Chernigov"
+ VICTORY_POINTS_11504:0 "Poltava"
+ VICTORY_POINTS_11546:0 "Nikolayev"
  VICTORY_POINTS_3520:0 "Sumy"
  VICTORY_POINTS_13265:0 "Mariupol"
- VICTORY_POINTS_6741:0 "Kertsch"
- VICTORY_POINTS_11561:0 "Por Kriwoi Rog"
- VICTORY_POINTS_719:0 "Noworossiysk"
- VICTORY_POINTS_476:0 "Winniza"
+ VICTORY_POINTS_6741:0 "Kerch"
+ VICTORY_POINTS_11561:0 "Krivoy Rog"
+ VICTORY_POINTS_719:0 "Novorossiysk"
+ VICTORY_POINTS_476:0 "Vinnitsa"
  VICTORY_POINTS_488:0 "Cherkasy"
- VICTORY_POINTS_3452:0 "Kropywnyzkyj"
+ VICTORY_POINTS_3452:0 "Yelysavetgrad"
  VICTORY_POINTS_9451:0 "Uman"
  VICTORY_POINTS_3686:0 "Sevastopol"
- VICTORY_POINTS_3720:0 "Maikop"
+ VICTORY_POINTS_3720:0 "Maykop"
  VICTORY_POINTS_4724:0 "Krasnoyarsk"
  VICTORY_POINTS_4728:0 "Petropavlovsk"
  VICTORY_POINTS_4797:0 "Irkutsk"
  VICTORY_POINTS_6245:0 "Tver"
  VICTORY_POINTS_6262:0 "Tula"
  VICTORY_POINTS_6338:0 "Kazan"
+ VICTORY_POINTS_9259:0 "Cheboksary"
  VICTORY_POINTS_7274:0 "Novonikolayevsk"
  VICTORY_POINTS_7375:0 "Perm"
  VICTORY_POINTS_7661:0 "Baku"
  VICTORY_POINTS_9288:0 "Gomel"
  VICTORY_POINTS_9355:0 "Orel"
  VICTORY_POINTS_9753:0 "Astrakhan"
+ VICTORY_POINTS_759:0 "Elista"
+ VICTORY_POINTS_11696:0 "Stavropol"
  VICTORY_POINTS_10641:0 "Yakutsk"
  VICTORY_POINTS_10696:0 "Omsk"
- VICTORY_POINTS_11159:1 "Petrosawodsk"
- VICTORY_POINTS_3187:1 "Sortavala"
+ VICTORY_POINTS_11159:1 "Petrozavodsk"
+ VICTORY_POINTS_3187:1 "Serdovol"
  VICTORY_POINTS_110:1 "Waldai"
  VICTORY_POINTS_187:1 "Bologoye"
  VICTORY_POINTS_2999:1 "Vyshny Volochyok"
@@ -369,8 +372,8 @@
  VICTORY_POINTS_3391:1 "Odintsovo"
  VICTORY_POINTS_11282:1 "Krasnogorsk"
  VICTORY_POINTS_9140:1 "Pechenga"
- VICTORY_POINTS_9131:1 "Wologda"
- VICTORY_POINTS_3124:1 "Tscherepowez"
+ VICTORY_POINTS_9131:1 "Vologda"
+ VICTORY_POINTS_3124:1 "Cherepovets"
  VICTORY_POINTS_11234:1 "Velikiye Luki"
  VICTORY_POINTS_11121:1 "Oulu"
  VICTORY_POINTS_11141:1 "Kuopio"
@@ -384,7 +387,7 @@
  VICTORY_POINTS_11241:0 "Vitebsk"
  VICTORY_POINTS_11225:0 "Samara"
  VICTORY_POINTS_11370:0 "Minsk"
- VICTORY_POINTS_11437:0 "Dnipropetrovsk"
+ VICTORY_POINTS_11437:0 "Yekaterinoslav"
  VICTORY_POINTS_11670:0 "Odessa"
  VICTORY_POINTS_12189:0 "Khabarovsk"
  VICTORY_POINTS_12320:0 "Yerevan"
@@ -691,7 +694,7 @@
  VICTORY_POINTS_1453:0 "Baton Rouge"
  VICTORY_POINTS_12498:0 "New Liverpool"
  VICTORY_POINTS_12782:0 "San Antonio"
- VICTORY_POINTS_13090:0 "Unarasuka"
+ VICTORY_POINTS_13090:0 "Ostrov Unalaska"
  VICTORY_POINTS_13091:0 "Novo-Odessa"
  VICTORY_POINTS_3778:0 "Ottawa"
  VICTORY_POINTS_3775:0 "Toronto"
@@ -991,8 +994,8 @@
  VICTORY_POINTS_12991:0 "Mogadíscio"
  VICTORY_POINTS_6318:0 "Manchester"
  VICTORY_POINTS_9315:0 "Sheffield"
- VICTORY_POINTS_11405:0 "Zaporizhia"
- VICTORY_POINTS_9461:0 "Luhansk"
+ VICTORY_POINTS_11405:0 "Aleksandrovsk"
+ VICTORY_POINTS_9461:0 "Lugansk"
  VICTORY_POINTS_3734:0 "Krasnodar"
  VICTORY_POINTS_11349:0 "Rzhev"
  VICTORY_POINTS_8011:0 "Bangalore"
@@ -1043,10 +1046,9 @@
  VICTORY_POINTS_12071:0 "Luxor"
  VICTORY_POINTS_11999:0 "Aswan"
  VICTORY_POINTS_12333:0 "Ashgabat"
- VICTORY_POINTS_12250:0 "Dushanbe"
+ VICTORY_POINTS_12250:0 "Dyushambe"
  VICTORY_POINTS_7193:0 "Nicosia"
- VICTORY_POINTS_7335:0 "Qaragandy"
- VICTORY_POINTS_11701:0 "Aqtau"
+ VICTORY_POINTS_7335:0 "Karaganda"
  VICTORY_POINTS_10709:0 "Niwaharit"
  VICTORY_POINTS_1815:0 "Quickville"
  VICTORY_POINTS_1576:0 "Nukus"
@@ -1078,10 +1080,10 @@
  VICTORY_POINTS_10803:0 "Abidjan"
  VICTORY_POINTS_12830:0 "Bangui"
  VICTORY_POINTS_3618:0 "Guryev"
- VICTORY_POINTS_10742:0 "Tschardschou"
+ VICTORY_POINTS_10742:0 "Chardzhuy"
  VICTORY_POINTS_10256:0 "Magnitogorsk"
  VICTORY_POINTS_10284:0 "Kustanay"
- VICTORY_POINTS_7477:0 "Krasnowodsk"
+ VICTORY_POINTS_7477:0 "Krasnovodsk"
  VICTORY_POINTS_4261:0 "Orsk"
  VICTORY_POINTS_10253:0 "Aktobe"
  VICTORY_POINTS_1909:0 "Conakry"
@@ -1227,13 +1229,13 @@
  VICTORY_POINTS_3933:0 "Pamplona"
  VICTORY_POINTS_6966:0 "Tortosa"
  VICTORY_POINTS_11767:0 "Vlorë"
- VICTORY_POINTS_11312:0 "Marijampolė"
- VICTORY_POINTS_222:0 "Rezekne"
- VICTORY_POINTS_185:0 "Kuressaare"
- VICTORY_POINTS_9262:0 "Liepāja"
- VICTORY_POINTS_3296:0 "Ventspils"
- VICTORY_POINTS_6222:0 "Jelgava"
- VICTORY_POINTS_3255:0 "Jēkabpils"
+ VICTORY_POINTS_11312:0 "Mariampol"
+ VICTORY_POINTS_222:0 "Rezhitsa"
+ VICTORY_POINTS_185:0 "Arensburg"
+ VICTORY_POINTS_9262:0 "Libava"
+ VICTORY_POINTS_3296:0 "Vindava"
+ VICTORY_POINTS_6222:0 "Mitava"
+ VICTORY_POINTS_3255:0 "Yakovstadt"
  VICTORY_POINTS_6375:0 "Allenstein"
  VICTORY_POINTS_11333:0 "Southwark"
  VICTORY_POINTS_9239:0 "Reading"
@@ -1257,7 +1259,7 @@
  VICTORY_POINTS_11778:0 "Mpalikesír"
  VICTORY_POINTS_1606:0 "Ar-Raqqa"
  VICTORY_POINTS_7620:0 "Malatya"
- VICTORY_POINTS_9663:0 "Sotschi"
+ VICTORY_POINTS_9663:0 "Sotchi"
  VICTORY_POINTS_3585:0 "Karlsbad"
  VICTORY_POINTS_9541:0 "České Budějovice"
  VICTORY_POINTS_11401:0 "Reichenberg"
@@ -1266,29 +1268,30 @@
  VICTORY_POINTS_279:0 "Bromberg"
  VICTORY_POINTS_382:0 "Kaluga"
  VICTORY_POINTS_3492:0 "Belgorod"
- VICTORY_POINTS_11476:0 "Millerowo"
+ VICTORY_POINTS_11476:0 "Millerovo"
  VICTORY_POINTS_6724:0 "Simferopol"
- VICTORY_POINTS_737:0 "Kljutschewoje"
+ VICTORY_POINTS_737:0 "Oleshky"
  VICTORY_POINTS_11700:0 "Melitopol"
  VICTORY_POINTS_11351:0 "Tambov"
  VICTORY_POINTS_6398:0 "Lipetsk"
  VICTORY_POINTS_9258:0 "Penza"
- VICTORY_POINTS_487:0 "Michailowka"
- VICTORY_POINTS_9475:0 "Kamyschin"
+ VICTORY_POINTS_6391:0 "Saransk"
+ VICTORY_POINTS_487:0 "Mikhaylovka"
+ VICTORY_POINTS_9475:0 "Kamyshin"
  VICTORY_POINTS_11450:0 "Kamensk-Shakhtinsky"
- VICTORY_POINTS_11434:0 "Schachty"
+ VICTORY_POINTS_11434:0 "Alexandrovsk-Grushevsky"
  VICTORY_POINTS_13266:0 "Taganrog"
  VICTORY_POINTS_502:0 "Kramatorsk"
  VICTORY_POINTS_523:0 "Starobilsk"
  VICTORY_POINTS_11691:0 "Uschgorod"
  VICTORY_POINTS_11537:0 "Oral"
- VICTORY_POINTS_11523:0 "Pokrovsk"
+ VICTORY_POINTS_11523:0 "Kosakenstadt"
  VICTORY_POINTS_12128:0 "Orenburg"
- VICTORY_POINTS_6124:0 "Kirov"
+ VICTORY_POINTS_6124:0 "Vyatka"
  VICTORY_POINTS_11411:0 "Stanisławów"
- VICTORY_POINTS_462:0 "Chmelnizki"
+ VICTORY_POINTS_462:0 "Proskurov"
  VICTORY_POINTS_11427:0 "Tarnopol"
- VICTORY_POINTS_11543:0 "Rowno"
+ VICTORY_POINTS_11543:0 "Rovno"
  VICTORY_POINTS_3581:0 "Eperjes"
  VICTORY_POINTS_11539:0 "Besztercebánya"
  VICTORY_POINTS_6416:0 "Kielce"
