--- a/localisation/english/frontend_l_english.yml
+++ b/localisation/english/frontend_l_english.yml
@@ -207,5 +207,13 @@
  CHAT_ERROR_MUTEUNMUTE_SELF:0 "You cannot mute or unmute yourself!"
  CHAT_ERROR_CHAT_TIMEOUT_MESSAGE_SINGULAR:0 "You have been posting too frequently. Please wait for §Y1§! second before posting again."
  CHAT_ERROR_CHAT_TIMEOUT_MESSAGE_PLURAL:0 "You have been posting too frequently. Please wait for $TIME|Y$ seconds before posting again."
+ FE_RANDOMIZE_COUNTRY:0 "Select Random Country"
+ PICK_RANDOM_COUNTRY_TITLE:0 "Select Random Country"
+ RANDOMIZE_COUNTRY_BACK:0 "Close"
+ RANDOMIZE_COUNTRY_PICK:0 "Select Random"
+ FE_INTERESTING_MAJORS:0 "Interesting Major Countries"
+ FE_INTERESTING_MINORS:0 "Interesting Minor Countries"
+ FE_OTHER_COUNTRIES:0 "Other Countries"
+ FE_RANDOM_COUNTRY_ERROR_NO_COUNTRIES:0 "No valid countries"
  POLL:0 "Next Pax Patch/Update Poll - Community Input"
  DISCORD:0 "Pax Britannica Discord"
