some bugfixing and more flavor
-more culture descriptions + flags
-novokuznetsk as new siberian kuzbass flavor
-invalid modifiers fix
-more vanilla missing loc additions

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1143,7 +1143,8 @@
   PB_RUS_Import_Manchu_tt:0 "Unlocks Decision to §Yimport§! Manchurians seeking work to reduce the load on our workers.\n\nStates bordering Manchuria will gain one §YArms Factory§!.\n\n"
   PB_RUS_Ease_Oyrot_Industrialization_tt:0 "Upon completion of the §YSiberian Plan§!, the §YAltaic, Buryat, Khakas and Tuvan§! cultures will become §Gaccepted.§!"
   PB_RUS_Promote_Oyrot_Industrialization_tt:0 "As the §YCentral Industrial Program§! advances, states of §YAltaic§! or §YBuryat§! culture will recieve §Gadditional§! factories."
-  PB_Form_the_Kuzzbass_Mining_Concern_tt:0 "If completed before the §YKuznetsk Basin Industrialization§! is finished, the §YKuzbass§! state will receive additional resources."
+  PB_Form_the_Kuzzbass_Mining_Concern_tt:0 "If completed before the §YKuznetsk Basin Industrialization§! is finished, the §YKuzbass§! state will receive additional resources and §YNovokuznetsk§! will get §Y2§!£victory_points£ more §YVictory Points§!."
+  PB_Create_Novokuznetsk_tt:0 "Add §Y1§!£victory_points£ named §YNovokuznetsk§! with §YSupply Hub§! and §YRailway§!"
   PB_All_Roads_to_St_Petersburg_tt:0 "For the duration of the §YSiberian Plan§!, the following spirit will be active:"
 
   PB_Complete_Siberian_Plan_tt:0 "Our decisions during the §YSiberian Plan§! will determine the rewards granted"
