im feeling extra freaky today
-some map additions and shining cities in sahara

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -374,6 +374,7 @@
  VICTORY_POINTS_9140:1 "Pechenga"
  VICTORY_POINTS_9131:1 "Vologda"
  VICTORY_POINTS_3124:1 "Cherepovets"
+ VICTORY_POINTS_6167:0 "Rybinsk"
  VICTORY_POINTS_11234:1 "Velikiye Luki"
  VICTORY_POINTS_11121:1 "Oulu"
  VICTORY_POINTS_11141:1 "Kuopio"
