My mistake opps sry

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -144,6 +144,7 @@ PB_AME_Decrease_Freedmen_Support_tt:0 "Support from the £UC_SI_Freedmen §YFree
 AME_Melbourne_Acroplex_Overhaul_Project:0 "The Melbourne Arcoplex Renewal Project"
 AME_Melbourne_Acroplex_Overhaul_Population_Shift:0 "Melbourne Arcoplex Population Redistribution"
 AME_Lang_EIEC_Showdown:0 "The EIEC calls Lang's Bluff"
+AME_Lang_EIEC_Showdown_desc:0 "Fool me once, shame on thee. Fool me twice, shame on me."
 AME_Empire_Supercomplex_Construction:0 "The Empire Supercomplex Project"
 
 AME_Freedmen_Agitation:0 "Freedman Agitation"
@@ -767,15 +768,15 @@ PB_AME_Black_Steel_desc:0 "Other nations in the world might produce more oil the
 PB_AME_Automat_Quota:0 "The Automation Quota"
 PB_AME_Automat_Quota_desc:0 "One of biggest election promises of the Progress Party under Curtin was the implemtation of an Automation Quota in the workspace. The Quota will restrict the amount of Automatics to a certain percentages of workers in the workspace making cases of mass layoffs due to new advanced automatics harder. Though the planning has experienced some hiccups as several expections regarding different states, companies or activities had to be made. Especially the EIEC has been trying to prevent the passing of the Quota."
 PB_AME_Medical_Facilites:0 "Modern Medical Facilities"
-PB_AME_Medical_Facilites_desc:0 "Modern Medical Facilities"
+PB_AME_Medical_Facilites_desc:0 ""
 PB_AME_Midwest_Project:0 "New England Development Project"
-PB_AME_Midwest_Project_desc:0 "New England Development Project"
+PB_AME_Midwest_Project_desc:0 ""
 PB_AME_HardSuit_Factories:0 "The Hardsuit Factory Ground Appalia"
-PB_AME_HardSuit_Factories_desc:0 "The Hardsuit Factory Ground Appalia"
+PB_AME_HardSuit_Factories_desc:0 ""
 PB_AME_Florida_Native_Protection:0 "Protect Seminole Status"
-PB_AME_Florida_Native_Protection_desc:0 "Protect Seminole Status"
+PB_AME_Florida_Native_Protection_desc:0 ""
 PB_AME_Economic_Obligation_Plan:0 "The WEMP-Obligation Clause"
-PB_AME_Economic_Obligation_Plan_desc:0 "The WEMP-Obligation Clause"
+PB_AME_Economic_Obligation_Plan_desc:0 ""
 PB_AME_Fair_Pensions:0 "Increase Pensions"
 PB_AME_Fair_Pensions_desc:0 "With the funds from the Mega-Corps tax we can pursue social programs, we could not imagine before. To gain support from the aging consertative block and workers laborers we will increase the pensions by a good amount."
 PB_AME_Fair_Education_Act:0 "Fair Education Act"
@@ -1119,8 +1120,8 @@ PB_AME_American_Orbit_Program:0 "An American Orbit Program"
 PB_AME_American_Orbit_Program_desc:0 "The United Commonwealth has set its sights on the final frontier and is determined to establish itself as a leader in space exploration. To achieve this goal, the government has launched a new program aimed at developing cutting-edge technology and establishing a strong presence in space."
 PB_AME_Mech_Research:0 "Bureau of Automat Research"
 PB_AME_Mech_Research_desc:0 "Automats must be built to be highly versatile, able to traverse a variety of terrains and environments with ease. They will be need to be able to operate on land, in various theaters and environments. To expand our Automat research, the Bureau of Automat Research will be created to innovate on American mechanized designs."
-PB_AME_Industry_Research:0 "Standardize Industrial Procedures"
-PB_AME_Industry_Research_desc:0 "Through the use of standardized procedures, businesses will be able to reduce waste, improve product quality, and increase profits, leading to a more stable and prosperous economy. Additionally, the standardization of industrial procedures will make it easier for businesses to operate internationally and for the United Commonwealth to compete in the global marketplace."
+PB_AME_Industry_Research:0 "Expand Military Industries"
+PB_AME_Industry_Research_desc:0 ""
 PB_AME_Improved_Synthetic_Fabricators:0 "Improved Synthetic Metallurgy"
 PB_AME_Improved_Synthetic_Fabricators_desc:0 "Researchers in the Commonwealth are working on developing new methods of synthesizing these materials, including using advanced printing techniques and industrial processes. The resulting materials are expected to have a wide range of potential applications, from building stronger and lighter vehicles and structures, to creating more efficient and durable electronic devices. The development of synthetic metal materials is also expected to have significant implications for the defense industry, with the potential to create armor and weapons that are stronger and more effective than anything currently available."
 PB_AME_Expand_Midwest_Industry:0 "Expand Industry in the Midwest"
@@ -1679,7 +1680,7 @@ Unicom_Socialists.2.a:0 "The Big Fella can't stop winning!"
 
 Unicom_Socialists.3.t:0 "Edison calls our Bluff"
 Unicom_Socialists.3.d:0 "As morning rose, Lang stared blankly at the pneumatic tube station in his office, waiting for paperwork he knew would never arrive. He’d failed to sway the unions, failed to sway the media, and now Edison Electric was thumbing their nose at him. He could practically imagine Charles, the slimy piece of shit he was, laughing with his shareholders as the so-called Big Fella sunk in his chair.\n\nAll the power of the Prime Minister of the United Commonwealth of America, and he’d been cowed by a board of investors.\n\nThe workers of America had betrayed him, they had betrayed mankind, and sacrificed their future on the altar of international capitalism. All Lang could do now was solemnly retract his demands, knowing that the Edison controlled media would mock and deride him for the rest of his career."
-Unicom_Socialists.3.a:0 "Well, uh, you see it was just a prank and-"
+Unicom_Socialists.3.a:0 "Well, uh, you see it was just a misunderstanding and-"
 
 Unicom_Socialists.4.t:0 "Must we fight?"
 Unicom_Socialists.4.d:0 "The Workman's Party had long been advocating for better working conditions and wages for the employees of the Edison Imperial Electric Company. However, as they gained more political power, they began to realize the benefits of a cooperative approach.\n\nThe members of the EIEC board of directors were not unreasonable men, in fact they were all quite reasonable, and reasonable enough to agree to work with the party in the interests of American stability.\n\nPerhaps they were making a deal with the devil, but if it lead to the party retaining their electoral mandate, did it truly matter?"
@@ -2320,7 +2321,7 @@ AME_Nationalization_Threat2_tt:0 "§YBy threatening to nationalize the American 
 AME_Lang_Party_Rule_Fully_Consolidated_tt:0 "§rWith this victory, Lang will fully cement his control over the Workman's Party, whether it likes it or not.§!"
 AME_Lang_Party_Rule_Collapses_tt:0 "§YLang's gamble failed, the Edison kleptocrats continue to rule, and the Big Fella has done little more than make himself the biggest fool in america.§!"
 
-AME_Trade_Favors_tt:0 "§YCompleting this focus will grant us a positive national spirit, dependent on how much public support the Edison Electic Lobby has in the country. Higher support will mean a greater positive bonus. At the current level of popularity, we will receive the following:§!"
+AME_Trade_Favors_tt:0 "§YCompleting this focus will grant us a positive national spirit, dependent on how much political influence the Edison Electic Lobby has in the government. Higher influence will mean a greater positive bonus. At the current level of influence, we will receive the following:§!"
 
 AME_EIEC_Terms_tt:0 "§YWhile some union members and ardent socialists will denounce our efforts at a peaceful solution, we must work with current material realities.§!"
 AME_EIEC_Terms2_tt:0 "§YIf the influence of the Edison lobby is high enough, we will be unable to push a policy as progressive as we might want.§!"
