--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1173,6 +1173,9 @@
   PBNews.293.d:0 "Following the Unification of the Bahamas it seems like Philadelphias appetite for islands was still not satisfied. In recent weeks their government has made it clear to London that it should be their responsibility to administer the strategic Caribbean Islands of Britain. They  are in their backyard anyway and Britain is and was not able to ensure their safety. And so begrudgingly Britain relented and made way for change.\n\nThe people of the islands themselves have noticed now differnces. Just the representative of the governor has a new accent and a new flag. Same as always."
   PBNews.293.a:0 "America has an even bigger lake now"
 
+  PBNews.302.t:0 "IMPERIAL UNITY CEMENTED"
+  PBNews.302.d:0 "The billion souls that inhabit the British empire may breathe a sigh of relief today. With the rising tensions between Britain and America, calls for American independence or even total control of the empire, many feared an Imperial Civil War to be inevitable. Such fears seem to have been for naught however, as the American and British prime ministers held a public meeting today to “reinforce Imperial unity and discuss the Empire’s future”, the two leaders meeting with Queen Victoria herself to have a discussion on matters of the empire, chief among them American expansion into the Wild West in an effort to at last tame the region."
+  PBNews.302.a:0 "The sun will never set"
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
