AME fixes and CAL navy

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -975,8 +975,8 @@
  VICTORY_POINTS_7564:0 "Brisbane"
  VICTORY_POINTS_12535:0 "Ti'tsa-pa"
  VICTORY_POINTS_10651:0 "Pi'a ka bo ni uts"
- VICTORY_POINTS_3588:0 "Redding"
- VICTORY_POINTS_610:0 "Eureka"
+ VICTORY_POINTS_3588:0 "Buena Ventura"
+ VICTORY_POINTS_610:0 "Manzanita"
  VICTORY_POINTS_6881:0 "Santa Maria"
  VICTORY_POINTS_12642:0 "Historia"
  VICTORY_POINTS_1827:0 "Shaysville"
