--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -291,6 +291,7 @@
  VICTORY_POINTS_6961:0 "Nachodka"
  VICTORY_POINTS_664:0 "Iman"
  VICTORY_POINTS_9604:0 "Imperatorskaya Gavan"
+ VICTORY_POINTS_12559:0 "Nikolayevsk"
  VICTORY_POINTS_291:0 "Ufa"
  VICTORY_POINTS_7081:0 "Annaba"
  VICTORY_POINTS_10059:0 "Batna"
@@ -344,8 +345,10 @@
  VICTORY_POINTS_3686:0 "Sevastopol"
  VICTORY_POINTS_3720:0 "Maykop"
  VICTORY_POINTS_4724:0 "Krasnoyarsk"
+ VICTORY_POINTS_1803:0 "Bratsk"
  VICTORY_POINTS_4728:0 "Petropavlovsk"
  VICTORY_POINTS_4797:0 "Irkutsk"
+ VICTORY_POINTS_10524:0 "Severobaikalsk"
  VICTORY_POINTS_6245:0 "Tver"
  VICTORY_POINTS_6262:0 "Tula"
  VICTORY_POINTS_6338:0 "Kazan"
