even more urban flavor

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -354,6 +354,7 @@
  VICTORY_POINTS_6338:0 "Kazan"
  VICTORY_POINTS_9259:0 "Cheboksary"
  VICTORY_POINTS_7274:0 "Novonikolayevsk"
+ VICTORY_POINTS_7789:0 "Tomsk"
  VICTORY_POINTS_7375:0 "Perm"
  VICTORY_POINTS_7661:0 "Baku"
  VICTORY_POINTS_9288:0 "Gomel"
@@ -1288,7 +1289,7 @@
  VICTORY_POINTS_502:0 "Kramatorsk"
  VICTORY_POINTS_523:0 "Starobilsk"
  VICTORY_POINTS_11691:0 "Uschgorod"
- VICTORY_POINTS_11537:0 "Oral"
+ VICTORY_POINTS_11537:0 "Uralsk"
  VICTORY_POINTS_11523:0 "Kosakenstadt"
  VICTORY_POINTS_12128:0 "Orenburg"
  VICTORY_POINTS_6124:0 "Vyatka"
