more asian flavor and map improvement

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -957,7 +957,7 @@
  STATE_956:0 "Northern Ergun"
  STATE_957:0 "Mississippi"
  STATE_958:0 "Cumberland"
- STATE_959:0 "Nanjing"
+ STATE_959:0 "Tianjing"
  STATE_960:0 "North Hebei"
  STATE_961:0 "Shandong"
  STATE_962:0 "Waterloo"
