--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -520,6 +520,11 @@
  VICTORY_POINTS_4052:0 "Pyongyang"
  VICTORY_POINTS_4056:0 "Busan"
  VICTORY_POINTS_7125:0 "Seoul"
+ VICTORY_POINTS_7221:0 "Jemulpo"
+ VICTORY_POINTS_4126:0 "Jeonju"
+ VICTORY_POINTS_848:0 "Wonsan"
+ VICTORY_POINTS_12040:0 "Kaesung"
+ VICTORY_POINTS_6822:0 "Chongjin"
  VICTORY_POINTS_7186:0 "Taipei"
  VICTORY_POINTS_10433:0 "Harbin"
  VICTORY_POINTS_11771:0 "Mukden"
@@ -881,11 +886,11 @@
  VICTORY_POINTS_1588:0 "Qiqihar"
  VICTORY_POINTS_7832:0 "Heihe"
  VICTORY_POINTS_9866:0 "Baishan"
- VICTORY_POINTS_6981:0 "Dandong"
+ VICTORY_POINTS_6981:0 "Andong"
  VICTORY_POINTS_8104:0 "Chamdo"
  VICTORY_POINTS_944:0 "Yanbian"
  VICTORY_POINTS_973:0 "Mudanjiang"
- VICTORY_POINTS_6881:0 "Jixi"
+ VICTORY_POINTS_6811:0 "Jixi"
  VICTORY_POINTS_10463:0 "Jiamusi"
  VICTORY_POINTS_8041:0 "Nyingchi"
  VICTORY_POINTS_4704:0 "Kumul"
@@ -1024,7 +1029,8 @@
  VICTORY_POINTS_10006:0 "Xiangxi"
  VICTORY_POINTS_1474:0 "Tongren"
  VICTORY_POINTS_12274:0 "Nanchong"
- VICTORY_POINTS_10076:0 "Suzhou"
+ VICTORY_POINTS_10034:0 "Suzhou"
+ VICTORY_POINTS_13142:0 "Changzhou"
  VICTORY_POINTS_11982:0 "Zhenjiang"
  VICTORY_POINTS_1976:0 "Xi'an"
  VICTORY_POINTS_10474:0 "Xiangyang"
@@ -1133,6 +1139,7 @@
  VICTORY_POINTS_6898:0 "Chaoyang"
  VICTORY_POINTS_6837:0 "Huludao"
  VICTORY_POINTS_11764:0 "Yingkou"
+ VICTORY_POINTS_9835:0 "Jinzhou"
  VICTORY_POINTS_2022:0 "Lanzhou"
  VICTORY_POINTS_4592:0 "Suihua"
  VICTORY_POINTS_6668:0 "Besancon"
